5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1734_2508.log
== SUBMITION (2019-05-09 19:42:58) 
-- CODE:
n=int(input("digite n: "))
cont=2
div=2
soma=2
while(cont<=n):
	cont=cont+1
	div=div+2
	soma=soma+((-1)**cont)*(4/div)
print(round(soma,8))



-- EXECUTION TIME:
0.122833
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
1.56666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
1.34187181
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
1.43754281
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:15:45) 
-- CODE:
n=int(input("digite n: "))
p=3
cont=3
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(soma,8))
				  
c=0
soma = 0
b = 1
while(c<k):
	sinal = (-1)**c
	soma = soma + sinal*((x**b)/factorial(b))
	c=c+1
	b = b + 2




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:15:59) 
-- CODE:
n=int(input("digite n: "))
p=3
cont=3
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(soma,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:16:47) 
-- CODE:
n=int(input("digite n: "))
p=3
cont=3
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:17:08) 
-- CODE:
n=int(input("digite n: "))
pia=3
cont=3
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:17:19) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=3
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:17:25) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=3
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- EXECUTION TIME:
0.147815
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2508/main.py", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:17:31) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=3
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:17:56) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=3
soma=2
while(cont<n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:18:04) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=3
soma=2
while(cont<n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:18:13) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=3
soma=2
while(cont<n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:18:27) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=3
soma=2
while(cont<n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:19:28) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=4
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:19:43) 
-- CODE:
n=int(input("digite n: "))
pia=3
cont=4
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:20:00) 
-- CODE:
n=int(input("digite n: "))
pia=3
cont=4
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:20:10) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=4
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:20:23) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=2
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:20:50) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=2
soma=2
while(cont<=n):
	sinal = (-1)**c
	cont=cont+1
	soma=soma+2
	pia=cont+sinal*4/(soma*(soma+1)*(soma+2))
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal = (-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:23:12) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=1
i=2
while(cont<=n):
	sinal =(-1)**c
	pia=cont+sinal*4/(i*(i+1)*(i+2))
	cont=cont+1
	soma=soma+2
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal =(-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:23:28) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=0
i=2
while(cont<=n):
	sinal =(-1)**c
	pia=cont+sinal*4/(i*(i+1)*(i+2))
	cont=cont+1
	soma=soma+2
print(round(pia,8))
				 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sinal =(-1)**c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:31:46) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=0
i=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal =(-1)**c
		pia=pia+sinal*4/(i*(i+1)*(i+2))
		cont=cont+1
		i=i+2
print(round(pia,8))
				 




-- EXECUTION TIME:
0.163052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2508/main.py", line 10, in <module>
    sinal =(-1)**c
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:32:01) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=0
i=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal =(-1)**c
		pia=pia+sinal*4/(i*(i+1)*(i+2))
		cont=cont+1
		i=i+2
	print(round(pia,8))
				 




-- EXECUTION TIME:
0.14642
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2508/main.py", line 10, in <module>
    sinal =(-1)**c
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:32:02) 
-- CODE:
n=float(input("digite n: "))
pia=3
cont=0
i=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal =(-1)**c
		pia=pia+sinal*4/(i*(i+1)*(i+2))
		cont=cont+1
		i=i+2
	print(round(pia,8))
				 




-- EXECUTION TIME:
0.210641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2508/main.py", line 10, in <module>
    sinal =(-1)**c
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:33:21) 
-- CODE:
n=float(input("digite k: "))
p=3
cont=0
i=2
if(n==1):
	pia=3.0
	print(round(pia,8))
else:
	while(cont<n-1):
		sinal =(-1)**c
		p= p+sinal*4/((i)*(i+1)*(i+2))
		cont=cont+1
		i=i+2
	print(round(p,8))
				 




-- EXECUTION TIME:
0.168142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2508/main.py", line 10, in <module>
    sinal =(-1)**c
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:34:46) 
-- CODE:
n=float(input("digite k: "))
p=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal =(-1)**c
		p= p+sinal*4/((i*(i+1)*(i+2))
		cont=cont+1
		i=i+2
	print(round(p,8))
				 




-- EXECUTION TIME:
0.195564
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 12
    cont=cont+1
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:34:48) 
-- CODE:
n=float(input("digite k: "))
p=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal =(-1)**c
		p= p+sinal*4/((i*(i+1)*(i+2))
		cont=cont+1
		i=i+2
	print(round(p,8))
				 




-- EXECUTION TIME:
0.194574
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 12
    cont=cont+1
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:34:49) 
-- CODE:
n=float(input("digite k: "))
p=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal =(-1)**c
		p= p+sinal*4/((i*(i+1)*(i+2))
		cont=cont+1
		i=i+2
	print(round(p,8))
				 




-- EXECUTION TIME:
0.194263
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 12
    cont=cont+1
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:34:49) 
-- CODE:
n=float(input("digite k: "))
p=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal =(-1)**c
		p= p+sinal*4/((i*(i+1)*(i+2))
		cont=cont+1
		i=i+2
	print(round(p,8))
				 




-- EXECUTION TIME:
0.149042
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 12
    cont=cont+1
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:35:24) 
-- CODE:
n=float(input("digite k: "))
p=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal =(-1)**cont
		p= p+sinal*4/((i*(i+1)*(i+2))
		cont=cont+1
		i=i+2
	print(round(p,8))
				 




-- EXECUTION TIME:
0.150491
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 12
    cont=cont+1
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:35:27) 
-- CODE:
n=float(input("digite k: "))
p=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal =(-1)**cont
		p= p+sinal*4/((i*(i+1)*(i+2))
		cont=cont+1
		i=i+2
	print(round(p,8))
				 




-- EXECUTION TIME:
0.136163
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 12
    cont=cont+1
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:35:52) 
-- CODE:
n=float(input("digite k: "))
p=3
cont=0
i=2
if(n==1):
	p=3.0
	print(round(p,8))
else:
	while(cont<n-1):
		sinal =(-1)**cont
		p= p+sinal*4/((i)*(i+1)*(i+2))
		cont=cont+1
		i=i+2
	print(round(p,8))
				 




-- EXECUTION TIME:
0.146036
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
